前後関係がおかしい？

--- a/DirectX_1.vcxproj.filters
+++ b/DirectX_1.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="Vector3.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="math.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BasicPixelShader.hlsl" />
