--- a/DirectX_1.vcxproj
+++ b/DirectX_1.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="math.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <ItemGroup>
